// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsRequirementsWithInstances renders component instance count === 0 1`] = `
<DocumentFragment>
  <div>
    <mock-cardscollapsiblecontrol
      headinglevel="3"
      id="keyboard-navigation00 test requirement name 1 test requirement description 1 (Failed)"
    />
    <mock-cardscollapsiblecontrol
      headinglevel="3"
      id="keyboard-traps10 test requirement name 2 test requirement description 2 (Failed)"
    />
  </div>
</DocumentFragment>
`;

exports[`TabStopsRequirementsWithInstances renders empty div when instance count === 0 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`TabStopsRequirementsWithInstances renders when instance count > 0 1`] = `
<DocumentFragment>
  <div>
    <mock-cardscollapsiblecontrol
      headinglevel="3"
      id="keyboard-navigation02 test requirement name 1 test requirement description 1 (Failed)"
    />
    <mock-cardscollapsiblecontrol
      headinglevel="3"
      id="keyboard-traps12 test requirement name 2 test requirement description 2 (Failed)"
    />
  </div>
</DocumentFragment>
`;
